--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,6 +30,7 @@
             android:fontFamily="casual"
             android:textColor="#000"
             android:hint="Email"
+            android:inputType="textEmailAddress"
             android:textColorHint="#000"/>
           <EditText
               android:id="@+id/senha"
@@ -39,6 +40,7 @@
               android:hint="Senha"
               android:textColor="#000"
               android:textColorHint="#000"
+              android:inputType="textPassword"
               android:fontFamily="casual"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"/>
@@ -57,8 +59,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/btn_style"
         android:layout_marginTop="-30dp"
-        android:layout_marginRight="80dp"
-        android:layout_marginLeft="80dp"
+        android:layout_marginRight="100dp"
+        android:layout_marginLeft="100dp"
         android:text="Entrar"
         android:textColor="#fff"
         android:fontFamily="serif"
