--- a/app/src/main/res/layout/activity_funcionalidades.xml
+++ b/app/src/main/res/layout/activity_funcionalidades.xml
@@ -18,7 +18,7 @@
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#fff"
+        android:background="#2ecc71"
         android:layout_alignParentBottom="true"
         app:menu="@menu/menu"/>
 
