--- a/app/src/main/res/layout/lagoa_abaete.xml
+++ b/app/src/main/res/layout/lagoa_abaete.xml
@@ -21,10 +21,11 @@
         android:id="@+id/btn_lagoadoabaete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Vamos!"
+        android:text="Em breve!"
         android:background="@drawable/btn_style"
         android:layout_marginLeft="80dp"
         android:layout_marginRight="80dp"
+        android:enabled="false"
         android:fontFamily="serif"
         android:textStyle="bold"/>
 
