--- a/app/src/main/res/layout/quiz.xml
+++ b/app/src/main/res/layout/quiz.xml
@@ -7,6 +7,13 @@
     android:background="@drawable/bg_quiz"
     android:gravity="center">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/quiz_layout"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"/>
+
     <Button
         android:id="@+id/jogar_quiz"
         android:layout_width="match_parent"
@@ -17,6 +24,7 @@
         android:textSize="20dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
+        android:layout_marginTop="-90dp"
         />
 
 
