--- a/app/src/main/res/layout/activity_play__quiz.xml
+++ b/app/src/main/res/layout/activity_play__quiz.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Play_Quiz"
+    android:id="@+id/telaQuiz"
     android:background="@drawable/fundo">
 
     <androidx.appcompat.widget.Toolbar
@@ -26,83 +27,98 @@
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:src="@drawable/quiz_layout"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:layout_marginTop="20dp"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:src="@drawable/quiz_layout"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="60dp"
+                android:layout_marginTop="20dp"/>
 
-    <TextView
-        android:id="@+id/questao"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pontos:"
-        android:textColor="#fff"
-        android:textSize="20dp"
-        android:fontFamily="casual"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Questão:"
-        android:gravity="center"
-        android:textSize="25dp"
-        android:textColor="#fff"
-        android:fontFamily="casual"
-        android:textStyle="bold"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"/>
+            <TextView
+                android:id="@+id/pontos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Pontos:"
+                android:textColor="#fff"
+                android:textSize="20dp"
+                android:fontFamily="casual"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/btn_style"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp"
-        android:text="OP1"
-        android:fontFamily="casual"
-        android:textColor="#fff"
-        android:textStyle="bold"
-        android:layout_marginRight="20dp"/>
+            <TextView
+                android:id="@+id/questao"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Questão:"
+                android:gravity="center"
+                android:textSize="25dp"
+                android:textColor="#fff"
+                android:fontFamily="casual"
+                android:textStyle="bold"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/btn_style"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:text="OP2"
-        android:fontFamily="casual"
-        android:textColor="#fff"
-        android:textStyle="bold"
-        android:layout_marginRight="20dp"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/btn_style"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:text="OP3"
-        android:fontFamily="casual"
-        android:textColor="#fff"
-        android:textStyle="bold"
-        android:layout_marginRight="20dp"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/btn_style"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:text="OP4"
-        android:fontFamily="casual"
-        android:textColor="#fff"
-        android:textStyle="bold"
-        android:layout_marginRight="20dp"/>
+            <Button
+                android:id="@+id/op1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_style"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="20dp"
+                android:text="OP1"
+                android:fontFamily="casual"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:layout_marginRight="20dp"/>
 
+            <Button
+                android:id="@+id/op2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_style"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:text="OP2"
+                android:fontFamily="casual"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:layout_marginRight="20dp"/>
+            <Button
+                android:id="@+id/op3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_style"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:text="OP3"
+                android:fontFamily="casual"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:layout_marginRight="20dp"/>
+            <Button
+                android:id="@+id/op4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_style"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:text="OP4"
+                android:fontFamily="casual"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="30dp"/>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
