--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="#fff">
 
@@ -15,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <ImageView
+                android:id="@+id/logo"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/logo"
@@ -25,8 +25,8 @@
                 android:layout_height="wrap_content"
                 android:text="Vivendo o Parque"
                 android:textColor="#fff"
-                android:layout_marginLeft="130dp"
                 android:layout_marginTop="20dp"
+                android:layout_toRightOf="@id/logo"
                 android:textSize="18dp"
                 android:fontFamily="serif"/>
 
